# infnet

./: README.md  bun.lockb  eslint.config.js  package.json  tsconfig.json
.github/workflows/: block-iii-dotnet-tests.yml  c-sharp-ii-dotnet-build.yml  main.yml  not-jquery-ci.yml  not-jquery-release.yml  programming_club.yml
.husky/: pre-commit
block_iv/tp2/: README.md  index.html  package.json  wrangler.jsonc
block_iv/tp3/: BACKLOG.md  index.html  package.json  wrangler.jsonc
block_iv/tp4/: .prettierrc.json  BACKLOG.md  README.md  package.json  worker-configuration.d.ts  wrangler.jsonc
c_sharp_i/AT/: Exercise01.cs  Exercise02.cs  Exercise03.cs  Exercise04.cs  Exercise05.cs  Exercise06.cs  Exercise07.cs  Exercise08.cs  Exercise09.cs  Exercise10.cs  Exercise11.cs  Exercise12.cs  IExercise.cs  Program.cs  TheoreticalExercise.cs  Utils.cs
c_sharp_i/TP1/: Exercise1.cs  Exercise10.cs  Exercise11.cs  Exercise12.cs  Exercise2.cs  Exercise3.cs  Exercise4.cs  Exercise5.cs  Exercise6.cs  Exercise7.cs  Exercise8.cs  Exercise9.cs  IExercise.cs  Program.cs  Utils.cs
c_sharp_i/TP2/: Exercise1.cs  Exercise10.cs  Exercise11.cs  Exercise12.cs  Exercise2.cs  Exercise3.cs  Exercise4.cs  Exercise5.cs  Exercise6.cs  Exercise7.cs  Exercise8.cs  Exercise9.cs  IExercise.cs  Program.cs  Utils.cs
c_sharp_i/TP3/: Circle.cs  Exercise01.cs  Exercise04.cs  Exercise05.cs  Exercise06.cs  Exercise09.cs  Exercise12.cs  IExercise.cs  Matricula.cs  Program.cs  Sphere.cs  TheoreticalExercise.cs  Ticket.cs  Utils.cs
c_sharp_ii/: .gitignore
c_sharp_ii/AT/: AT.sln
c_sharp_ii/TP1/: Exercise01.cs  Exercise04.cs  Exercise06.cs  Program.cs
c_sharp_ii/TP2/: .gitignore  Constants.cs  Program.cs  Utils.cs
data_and_sql_i/: README.md
data_and_sql_ii/tp1/: README.md
data_fundamentals/tp1/: constants.py  main.py  task.py  task_manager.py
data_fundamentals/tp3/: .env  .gitignore  README.md  app.py  config.py  db.py  main.py
data_fundamentals/tp4/: dados_criminalidade.csv  main.py  requirements.txt
data_fundamentals/tp5/: database.py  main.py  models.py  requirements.txt  utils.py
data_science_with_python/notebooks/: first.ipynb
java_ii/at/: pom.xml  requests.http
java_ii/tp1/: .gitignore  settings.gradle
java_ii/tp2/: settings.gradle
java_ii/tp3/: build.gradle  settings.gradle
mobile_first_react/at/: eslint.config.js  index.html  package.json
programming_club/: .prettierignore
programming_club/algorithms/: .gitignore  latest
programming_club/algorithms/24.3T/: meson.build
programming_club/algorithms/24.3T/hackathon/: 01.py  02.py  03.py  04.py  06.py
programming_club/algorithms/24.3T/queue/: queue.py
programming_club/algorithms/24.3T/week_01/: 01_1794.c  02_3467.c  02_3467.py  03_2866.py  04_2551.py  05_3076.py
programming_club/algorithms/24.4T/data-structures/: linked-list.c  linked-list.h  linked-list.test.c  meson.build
programming_club/homework/: meson.build
programming_club/homework/maratona/: 01.c  02.c  03.c  05.py  06.c  07.py
programming_club/homework/week_01/: 01_hello_world.c  02_extremely_basic.c  04_system_of_a_download.c  05_lost_piece.c  06_lost_piece_hard.c
programming_club/homework/week_02/: 01_good_division.c  03_whose_turn.c  04_radars.c  06_base_32.c
programming_club/homework/week_03/: 01_fill_array.c  02_bad_luck.c  04_the_force_awakens.c  07_suspicious_gifts.c  meson.build
programming_club/homework/week_04/: 01_in_debt.c  02_cards.c  04_war.c  05_divisible_by_seven.c
python_i/at/: db.py  main.py  produtos.csv
python_i/calculator/: calc.py
python_i/is_prime/: main.py
python_i/tp1/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  common.py
python_i/tp2/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  common.py
python_i/tp3/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py
python_ii/at/: checkout.py  clientes.csv  database.py  main.py  mercado-at.bd  models.py  produtos.csv  reports.py  requirements.txt  utils.py
python_ii/tp1/: README.md  main.py  product_service.py  utils.py
python_ii/tp2/: requirements.txt
(+666 files in other folders)
